fixed that the key was not found (it had the wrong name in the secret)
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/playbooks/thoth-openshift-trigger-build/run.yaml
+++ b/playbooks/thoth-openshift-trigger-build/run.yaml
@@ -2,7 +2,7 @@
 - hosts: all
 
   tasks:
-    - name: Trigger OpenShift Build
+    - name: "Trigger OpenShift Build"
       uri:
         method: POST
         url: "{{ webhook_url }}/webhooks/{{ webhook_secret.key }}/generic"
