--- a/playbooks/base/post.yaml
+++ b/playbooks/base/post.yaml
@@ -19,6 +19,6 @@
         - import_role: name=emit-job-report
         - import_role: name=buildset-artifacts-location
       vars:
-        zuul_log_url: "http://zuul-1.thoth-station.ninja/logs"
+        zuul_log_url: "https://managesf.thoth-station.ninja/logs"
         zuul_logserver_root: "{{ site_sflogs.path }}"
 
