--- a/nodepool/thoth.yaml
+++ b/nodepool/thoth.yaml
@@ -16,19 +16,19 @@
       pools:
         - name: "thoth-zuul"
           labels:
-            - name: "coala"
+            - name: "thoth-coala"
               image: "thoth-coala:latest"
               cpu: 1
               memory: 1024
-            - name: "pylint"
+            - name: "thoth-pylint"
               image: "thoth-pylint:latest"
               cpu: 1
               memory: 1024
-            - name: "pytest"
+            - name: "thoth-pytest"
               image: "thoth-pytest:latest"
               cpu: 1
               memory: 1024
-            - name: "ops"
+            - name: "thoth-ops"
               image: "thoth-ops:latest"
               cpu: 1
               memory: 1024
@@ -39,19 +39,19 @@
       pools:
         - name: "thoth-zuul"
           labels:
-            - name: "coala"
+            - name: "thoth-coala"
               image: "thoth-coala:ubi8"
               cpu: 1
               memory: 1024
-            - name: "pylint"
+            - name: "thoth-pylint"
               image: "thoth-pylint:ubi8"
               cpu: 1
               memory: 1024
-            - name: "pytest"
+            - name: "thoth-pytest"
               image: "thoth-pytest:ubi8"
               cpu: 1
               memory: 1024
-            - name: "ops"
+            - name: "thoth-ops"
               image: "thoth-ops:v0.11.0"
               cpu: 1
               memory: 1024
