--- a/zuul.d/thoth-openshift.yaml
+++ b/zuul.d/thoth-openshift.yaml
@@ -27,3 +27,18 @@
     secrets:
       - name: webhook_secret
         secret: sesheta_webhooks_generic_webhook_secret
+
+- job:
+    name: "thoth-github-wip"
+    parent: "base-openshift-pod"
+    description: |
+      This job calls the github-wip playbook with a curated set of
+      WIP labels and WIP title keywords
+    run: "playbooks/github-wip/run.yaml"
+    nodeset:
+      nodes:
+        - name: "pod"
+          label: "thoth-python36"
+    vars:
+      wip_labels: "do-not-merge wip rfc"
+      wip_keywords: "WIP RFC"
