moved to zuul-config repo
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/zuul.d/thoth-openshift.yaml
+++ b/zuul.d/thoth-openshift.yaml
@@ -43,3 +43,15 @@
     vars:
       wip_labels: "do-not-merge wip rfc"
       wip_keywords: "WIP RFC"
+
+- job:
+    name: "thoth-openshift-apply-templates"
+    parent: "base-openshift-pod"
+    nodeset:
+      nodes:
+        - name: "pod"
+          label: "thoth-ops"
+    run: playbooks/thoth-openshift-apply-template/run.yaml
+    secrets:
+      - name: THOTH_OPS_TOKEN
+        secret: thoth_ops
