--- a/playbooks/thoth-openshift-apply-template/run.yaml
+++ b/playbooks/thoth-openshift-apply-template/run.yaml
@@ -6,7 +6,7 @@
 
   tasks:
     - name: "log in as thoth-ops"
-      command: "oc login --insecure-skip-tls-verify=true --token ${THOTH_OPS_TOKEN} https://kubernetes.default.svc.cluster.local"
+      shell: "oc login --insecure-skip-tls-verify=true --token ${THOTH_OPS_TOKEN} https://kubernetes.default.svc.cluster.local"
 
     - name: "OpenShift whoami"
       command: "oc whoami"
