--- a/zuul.d/_jobs-openshift.yaml
+++ b/zuul.d/_jobs-openshift.yaml
@@ -11,8 +11,8 @@
     post-run:
       - playbooks/base/post.yaml
     roles:
-      - zuul: thoth-station/zuul-jobs
-      - zuul: zuul-jobs
+      - zuul: github.com/thoth-station/zuul-jobs
+      - zuul: opendev.org/zuul/zuul-jobs
     timeout: 1800
     # Set attempts to 1 until it's working well
     attempts: 1
@@ -35,8 +35,8 @@
     post-run:
       - playbooks/base/post.yaml
     roles:
-      - zuul: thoth-station/zuul-jobs
-      - zuul: zuul-jobs
+      - zuul: github.com/thoth-station/zuul-jobs
+      - zuul: opendev.org/zuul/zuul-jobs
     # Set attempts to 1 until it's working well
     attempts: 1
     secrets:
