zuul: enable reporting the build page url
Instead of reporting with the logserver indexes url,
this change enable zuul to report the new build interface
which is more simple to use as it shows the output of
the failed task on failed job.

--- a/resources/_internal.yaml
+++ b/resources/_internal.yaml
@@ -6,6 +6,8 @@ resources:
       description: "The local tenant."
       url: "https://thoth-station.ninja/manage"
       default-connection: github.com
+      tenant-options:
+        zuul/report-build-page: True
 
   connections:
     github.com:
