--- a/zuul.d/_jobs-base.yaml
+++ b/zuul.d/_jobs-base.yaml
@@ -36,7 +36,7 @@
       - service_user
     vars:
       zuul_log_url: "https://thoth-station.ninja/logs"
-      gateway_url: "https://thoth-station.ninja"
+      gateway_url: "https://managesf.thoth-station.ninja"
       tenant_config: False
     nodeset:
       nodes: []
