:sparkles: added a github check reporter to the check pipeline
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/zuul.d/_pipelines.yaml
+++ b/zuul.d/_pipelines.yaml
@@ -24,10 +24,12 @@
     success:
       github.com:
         status: "success"
+        check: "success"
       sqlreporter:
     failure:
       github.com:
         status: "failure"
+        check: "failure"
       sqlreporter:
 
 - pipeline:
